--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             </tbody>
         </table>
     </div>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
